Artist overflow fix

--- a/app/(core)/stats/charts/TopArtists/TopArtists.module.scss
+++ b/app/(core)/stats/charts/TopArtists/TopArtists.module.scss
@@ -11,5 +11,6 @@
 
   .artists {
     list-style-position: inside;
+    overflow-y: auto;
   }
 }
